ラインセンサ基板のPCBをやり直してちょっと進めた
抵抗追加した分とかいろいろきれいにしてみる

--- a/Schematic-PCB/Line-20240325/place_footprints.ini
+++ b/Schematic-PCB/Line-20240325/place_footprints.ini
@@ -2,9 +2,15 @@
 arrangement = Circular
 
 [reference.circular]
-angle = -18.000
+angle = -72
 radial_step = 0.0
-radius = 66.5
+radius = 57.5
+nth_rotate = 1
+nth_rotate_angle = 0
+
+[reference.linear]
+step_x = 0
+step_y = 3
 nth_rotate = 1
 nth_rotate_angle = 0
 
