QRコードとか追加した

--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=F:\main\GitHub\2024-TOINIOT2\Icon\main-2.ico,0
+IconResource=F:\ScienceClub\2024-TOINIOT2\Icon\main-2.ico,0
 [ViewState]
 Mode=
 Vid=
