update: ラインセンサ基板の設計を進めた

--- a/Schematic-PCB/Line-20240325/place_footprints.ini
+++ b/Schematic-PCB/Line-20240325/place_footprints.ini
@@ -2,7 +2,7 @@
 arrangement = Circular
 
 [reference.circular]
-angle = -13.846154
+angle = -13.8461538
 radial_step = 0.0
 radius = 62.5
 nth_rotate = 1
