update: ラインセンサ基板の回路とPCBを進めた
基板外形の更新版を追加など

--- a/Schematic-PCB/Line-20240325/place_footprints.ini
+++ b/Schematic-PCB/Line-20240325/place_footprints.ini
@@ -2,9 +2,9 @@
 arrangement = Circular
 
 [reference.circular]
-angle = -13.8461538
+angle = 22.5
 radial_step = 0.0
-radius = 62.5
+radius = 40
 nth_rotate = 1
 nth_rotate_angle = 0
 
