update: ライブラリ化

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 Program/2024-New_abe/2025-02-28_radioController/Controller/.vs/Controller/v17/
 
 Program/2024-New_abe/2025-02-28_radioController/Controller/.vs/Controller/FileContentIndex/
+
+Presentation-Sheet/3d/#003 v57.obj
+
+Presentation-Sheet/3d/#003 v57.mtl
