--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Program/2024-New_abe/2025-02-28_radioController/Controller/.vs/Controller/FileCo
 Presentation-Sheet/3d/#003 v57.obj
 
 Presentation-Sheet/3d/#003 v57.mtl
+
+Program/2024-New_abe/2025-02-28_radioController/Controller/Controller/
