update: スキャンまでを組み込んだ

--- a/Program/2024-New_abe/2025-02-28_radioController/Controller/Controller.vcxproj
+++ b/Program/2024-New_abe/2025-02-28_radioController/Controller/Controller.vcxproj
@@ -144,13 +144,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BluetoothLE.cpp" />
     <ClCompile Include="GamePad.cpp" />
     <ClCompile Include="General.cpp" />
     <ClCompile Include="General.hpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="WstringToString.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BluetoothLE.hpp" />
     <ClInclude Include="GamePad.hpp" />
+    <ClInclude Include="WstringToString.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
