update: ESP32C3のキャラクテリスティックを全て取得できるようにした

--- a/Program/2024-New_abe/2025-02-28_radioController/BLEcpp/BLEcpp.vcxproj
+++ b/Program/2024-New_abe/2025-02-28_radioController/BLEcpp/BLEcpp.vcxproj
@@ -135,7 +135,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="general.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="general.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
