--- a/Program/2024-New_abe/2025-02-28_radioController/BLEcpp/BLEcpp.vcxproj.filters
+++ b/Program/2024-New_abe/2025-02-28_radioController/BLEcpp/BLEcpp.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="general.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="general.hpp">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
