--- a/desktop.ini
+++ b/desktop.ini
@@ -1,6 +1,2 @@
 [.ShellClassInfo]
-IconResource=F:\ScienceClub\2024-TOINIOT2\Icon\main-2.ico,0
-[ViewState]
-Mode=
-Vid=
-FolderType=Generic
+IconResource=F:\main\GitHub\2024-TOINIOT2\main.ico,0
